fix:oer component don't stretch banner

--- a/Frontend/src/app/modules/oer/oer.component.scss
+++ b/Frontend/src/app/modules/oer/oer.component.scss
@@ -83,6 +83,7 @@
   width:100%;
   max-height: 300px;
   min-height: 80px;
+  object-fit: cover;
 }
 .content{
   position: relative;
